# School_API

./: .dockerignore  .env  .gitignore  BACKEND_PLAN.md  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  MANUAL_GIT_STEPS.md  README.md  RUST_BUILD_SETUP.md  SWAGGER_CHANGES_SUMMARY.md  SWAGGER_COMPLETE_SUMMARY.md  SWAGGER_INTEGRATION.md  SWAGGER_INTEGRATION_COMPLETE.md  SWAGGER_STATUS_SUMMARY.md  SWAGGER_VERIFICATION_COMPLETE.md  setup.sh
migrations/: 001_init.sql  003_add_status_and_new_tables.sql  004_create_applications_table.sql  005_update_application_statuses.sql  006_drop_otp_table.sql  009_add_assignment_submission_grading.sql  009b_ensure_attendance_table.sql  010_add_dropout_alert_tracking.sql  011_attendance_system.sql  011_student_attendance_qr.sql  012_create_mentor_applications.sql
src/: app.rs  main.rs  state.rs
src/controllers/: admin.controllers.rs  admin.rs  application.rs  auth.rs  auth_controllers.rs  mentor.controllers.rs  mentor.rs  mod.rs  school.controllers.rs  school.rs  school_controllers.rs  student.controllers.rs  student.rs  student_controllers.rs
src/docs/: mod.rs  security.rs
src/middlewares/: extractors.rs  mod.rs  role_guard.rs  swagger_auth.rs
src/models/: application.rs  assignment.rs  attendance.rs  course.rs  enrollment.rs  material.rs  mentor.rs  mod.rs  school.rs  student.rs  submission.rs  user.rs
src/routes/: admin_routes.rs  application_routes.rs  attendance_routes.rs  auth_routes.rs  health.rs  mentor_routes.rs  mod.rs  protected_routes.rs  school_routes.rs  student_routes.rs
(+13 files in other folders)
