[package]
name = "school-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
dotenvy = "0.15"
